<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemanderActivity">


    <ImageView
        android:id="@+id/imageViewSoundRecorderActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="DemanderActivity"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginscreen2" />

    <TextView
        android:id="@+id/Unit_Price"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/toWhoseName"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:circularflow_defaultRadius="300dp"
        app:circularflow_radiusInDP="300dp"
        app:layout_constraintBottom_toBottomOf="@+id/demandnumber"
        app:layout_constraintEnd_toStartOf="@+id/unit_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewSoundRecorderActivity"
        app:layout_constraintVertical_bias="0.523" />

    <EditText
        android:id="@+id/demandexplanation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:hint="@string/demandExplanation"
        android:minHeight="48dp"
        android:singleLine="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/demandSend"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/demandnumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:hint="@string/demandNumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/demandexplanation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/demandpurpose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:hint="@string/demanderPurpose"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/demandnumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/demandname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:hint="@string/toWhoseTitle"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/demandpurpose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewSoundRecorderActivity"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/readerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/readToRecord"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/demandPlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/demandButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toEndOf="@+id/readerButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/demandSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="26dp"
        android:text="@string/demandSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/unit_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="244dp"
        android:text="Unit_price"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/demandpurpose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readerButton"
        app:layout_constraintVertical_bias="0.538" />

</androidx.constraintlayout.widget.ConstraintLayout>